# Bomb-Erman

./: CMakeLists.txt  README.md  install.sh
cmake/Modules/: FindIrrKlang.cmake  FindIrrlicht.cmake
includes/: ACharacter.hh  AI.hh  ColorFactory.hh  Configuration.hh  ExtensionsValidator.hh  Game.hh  GameParameters.hh  GetRand.hpp  HighScores.hh  ILikeToMoveIt.hpp  Intro.hh  IrrlichtEnvFinder.hh  LevelFactory.hh  Map.hh  MultipleEventReceiver.hh  MultipleValidator.hpp  MyDirectory.hh  MyDirectoryException.hh  OptionsManager.hh  Player.hh  Position.hh  SafeCopyable.hpp  SaveInformation.hh  Score.hh  Settings.hh  SizeTConverter.hh  SkipEventReceiver.hh  SoundManager.hh
includes/box/: ABox.hh  Bomb.hh  BoxType.hh  Empty.hh  Explosion.hh
includes/box/block/: Breakable.hh  Unbreakable.hh
includes/box/bonus/: ABonus.hh  ExtraLife.hh  ImproveBomb.hh  Legacy.hh  SimBomb.hh  UpRange.hh
includes/exceptions/: AudioLoaderException.hh  ConfigurationException.hh  GuiViewException.hh  ImagesLoaderException.hh  IrrlichtEnvFinderException.hh  MeshesLoaderException.hh  OptionsManagerException.hh  RessourcesLoaderException.hh  RessourcesMenuLoaderException.hh  RessourcesMissingException.hh  SavesException.hh  ScoresViewEventReceiverException.hh  SizeTConverterException.hh  SoundManagerException.hh
includes/gui/: AViewEventReceiver.hh  GameParametersViewEventReceiver.hh  GuiView.hh  HelpViewEventReceiver.hh  MainViewEventReceiver.hh  OptionsViewEventReceiver.hh  SGuiElem.hh  SavesViewEventReceiver.hh  ScoresViewEventReceiver.hh  ViewManager.hh  ViewsInstantiator.hh
includes/interfaces/: IConfiguration.hh  ILoadable.hh  IMonitoredLoader.hh  IMultipleEventReceiver.hh  ISafeCopyable.hpp  ISizeTConverter.hh  IViewManager.hh  IViewsInstantiator.hh
includes/loaders/: AudioLoader.hh  DirectoryLoader.hh  ImagesLoader.hh  MeshesLoader.hh  MonitoredLoader.hh  RessourcesLoader.hh  RessourcesMenuLoader.hh
indie_config/: config.sqc
indie_persistent_data/options/: options.sqo
indie_persistent_data/saves/: Erman_2017-11-04_15:06:05.sqg
indie_persistent_data/settings/: settings.sqgp
indie_ressources/assets/: Bomb.md2
srcs/: ACharacter.cpp  AI.cpp  ColorFactory.cpp  Configuration.cpp  ExtensionsValidator.cpp  Game.cpp  GameParameters.cpp  HighScores.cpp  Intro.cpp  IrrlichtEnvFinder.cpp  LevelFactory.cpp  Map.cpp  MultipleEventReceiver.cpp  MyDirectory.cpp  OptionsManager.cpp  Player.cpp  SCharacter_info.cpp  SaveInformation.cpp  Settings.cpp  SizeTConverter.cpp  SoundManager.cpp  main.cpp
srcs/box/: ABox.cpp  Bomb.cpp  Empty.cpp  Explosion.cpp
srcs/box/block/: Breakable.cpp  Unbreakable.cpp
srcs/box/bonus/: ABonus.cpp  ExtraLife.cpp  ImproveBomb.cpp  Legacy.cpp  SimBomb.cpp  UpRange.cpp
srcs/gui/: GameParametersViewEventReceiver.cpp  GuiView.cpp  HelpViewEventReceiver.cpp  MainViewEventReceiver.cpp  OptionsViewEventReceiver.cpp  SGuiElem.cpp  SavesViewEventReceiver.cpp  ScoresViewEventReceiver.cpp  ViewManager.cpp  ViewsInstantiator.cpp
srcs/loaders/: AMonitoredLoader.cpp  AudioLoader.cpp  ImagesLoader.cpp  MeshesLoader.cpp  MonitoredLoader.cpp  RessourcesLoader.cpp  RessourcesMenuLoader.cpp
